--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "authentication",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,13 +15,17 @@
     "@types/cors": "^2.8.17",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "prisma": "^5.11.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6"
   }
 }
