--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "authentication",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc ; PORT=9987 node Dist/main",
     "dev": "tsc ; node Dist/main"
   },
   "keywords": [],
